Fixed overflow bug in IE.

--- a/modules/org.opencms.editors.ade/resources/system/workplace/resources/editors/ade/css/advanced_direct_edit.css
+++ b/modules/org.opencms.editors.ade/resources/system/workplace/resources/editors/ade/css/advanced_direct_edit.css
@@ -780,6 +780,7 @@ li.jTreePlacement, li.jTreePlaceholder {
 	background-color: #6e9ce0;
 	margin-left: 7px;
     margin-bottom: 7px;
+    position: relative;
 }
 
 .cms-scrolling ul.cms-scrolling-inner {
